propellor (5.1.1) UNRELEASED; urgency=medium

  * bootstrappedFrom: Set up local privdata file.

 -- Joey Hess <id@joeyh.name>  Wed, 29 Nov 2017 11:45:08 -0400

propellor (5.1.0) unstable; urgency=medium

  [ Sean Whitton ]
  * File.isSymlinkedTo now revertable. (minor API change)
  * Sbuild module changes:
    - Type of Sbuild.built changed to accept additional properties to be
      ensured inside schroots. (API change)
      See the suggested usage in module's documentation for new syntax.
    - Drop Sbuild.installed, Sbuild.builtFor, Sbuild.updated,
      Sbuild.updatedFor. (API change)
      Use Sbuild.built instead.  See suggested usage in module's documentation.
    - Propellor no longer sets up apt proxies in sbuild chroots automatically.
      Instead, pass the new Sbuild.useHostProxy to Sbuild.built to have
      Propellor propagate the host's Apt proxy configuration into the chroot.
      See suggested usage in module's documentation.
    - Internally, Propellor no longer invokes sbuild-createchroot(1) to build
      schroots.
    - Update documentation.

 -- Joey Hess <id@joeyh.name>  Thu, 23 Nov 2017 10:38:16 -0400

propellor (5.0.0) unstable; urgency=medium

  * Debootstrap.built now supports bootstrapping chroots for foreign
    OS's, using qemu-user-static.
  * Machine: New module collecting machine-specific properties for 
    building bootable images for ARM boards.
    Tested working boards: Olimex Lime, CubieTruck, Banana Pi, SheevaPlug.
  * Diskimage.imageBuiltFor: New property to build a disk image for a Host,
    using partition table information configured via the new properties
    hasPartitionTableType, hasPartition and adjustPartition.
  * Chroot.noServices moved to Service.noServices and its type changed.
    (API change)
  * Service: Avoid starting services when noServices is used.
  * Add Typeable instance to OriginUrl, fixing build with old versions
    of ghc.
  * Added Propellor.Property.impossible