@@ -1,6 +1,7 @@
 propellor (5.1.1) UNRELEASED; urgency=medium
 
   * bootstrappedFrom: Set up local privdata file.
+  * Parted: Fix names used for FAT and VFAT partitions.
 
  -- Joey Hess <id@joeyh.name>  Wed, 29 Nov 2017 11:45:08 -0400
 
